add tests for the negative cases; optimise services tests;